[gd_scene load_steps=42 format=3 uid="uid://bhl2w05302n0g"]

[ext_resource type="Script" uid="uid://b36j1uro5mui3" path="res://scenes/player/player.gd" id="1_dovo2"]
[ext_resource type="Texture2D" uid="uid://bv03q8ekk3l0d" path="res://assets/sprites/player/fall.png" id="2_p47bc"]
[ext_resource type="Texture2D" uid="uid://bvwl3mjl762qy" path="res://assets/sprites/player/idle.png" id="3_75vfm"]
[ext_resource type="Texture2D" uid="uid://bpr7gky1028i8" path="res://assets/sprites/player/jump.png" id="4_0owmy"]
[ext_resource type="Texture2D" uid="uid://dpbdjiaunbbqv" path="res://assets/sprites/player/run.png" id="5_qek5x"]
[ext_resource type="Script" uid="uid://bamkn3yeq12oe" path="res://fsm/state_machine.gd" id="6_0owmy"]
[ext_resource type="Script" uid="uid://dowthpp1484i7" path="res://scenes/player/player_idle.gd" id="7_qek5x"]
[ext_resource type="Script" uid="uid://c5s6lfesaq0ab" path="res://scenes/player/player_run.gd" id="8_qek5x"]
[ext_resource type="Script" uid="uid://dimevxpreapcn" path="res://scenes/player/player_jump.gd" id="9_h17s1"]
[ext_resource type="Script" uid="uid://4xqo3yqikllc" path="res://scenes/player/player_fall.gd" id="10_je7p5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5gtgg"]
atlas = ExtResource("2_p47bc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h17s1"]
atlas = ExtResource("3_75vfm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_je7p5"]
atlas = ExtResource("3_75vfm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm80t"]
atlas = ExtResource("3_75vfm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx1jg"]
atlas = ExtResource("3_75vfm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugbui"]
atlas = ExtResource("3_75vfm")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcs02"]
atlas = ExtResource("3_75vfm")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_myrg7"]
atlas = ExtResource("3_75vfm")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvlxm"]
atlas = ExtResource("3_75vfm")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf5tr"]
atlas = ExtResource("3_75vfm")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgqa7"]
atlas = ExtResource("3_75vfm")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ydkj"]
atlas = ExtResource("3_75vfm")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j4b4"]
atlas = ExtResource("4_0owmy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj68g"]
atlas = ExtResource("5_qek5x")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioxgp"]
atlas = ExtResource("5_qek5x")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnsyf"]
atlas = ExtResource("5_qek5x")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_007i1"]
atlas = ExtResource("5_qek5x")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cv16"]
atlas = ExtResource("5_qek5x")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4nxn"]
atlas = ExtResource("5_qek5x")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_28m0y"]
atlas = ExtResource("5_qek5x")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uniwh"]
atlas = ExtResource("5_qek5x")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqsei"]
atlas = ExtResource("5_qek5x")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tffgl"]
atlas = ExtResource("5_qek5x")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk8ii"]
atlas = ExtResource("5_qek5x")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mf0n"]
atlas = ExtResource("5_qek5x")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4hvnv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gtgg")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h17s1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je7p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm80t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx1jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugbui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcs02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myrg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvlxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf5tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgqa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ydkj")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j4b4")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj68g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioxgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnsyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_007i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cv16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4nxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28m0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uniwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqsei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tffgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk8ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mf0n")
}],
"loop": true,
"name": &"run",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8afob"]
size = Vector2(12, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p47bc"]
size = Vector2(16, 26)

[sub_resource type="Animation" id="Animation_75vfm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_p47bc"]
resource_name = "dissapear"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.0235294, 0.133333, 1), Color(1, 0.0235294, 0.133333, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0owmy"]
_data = {
&"RESET": SubResource("Animation_75vfm"),
&"dissapear": SubResource("Animation_p47bc")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
script = ExtResource("1_dovo2")
speed = 180.0
jump_speed = -330.0
gravity = 980.0
metadata/_edit_group_ = true

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="." groups=["player"]]
sprite_frames = SubResource("SpriteFrames_4hvnv")
animation = &"fall"
autoplay = "run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 4)
shape = SubResource("RectangleShape2D_8afob")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(1, 3)
shape = SubResource("RectangleShape2D_p47bc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0owmy")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("6_0owmy")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("7_qek5x")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("8_qek5x")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("9_h17s1")

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("10_je7p5")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
